# tala

./: .gitignore  .versionrc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.opencode/agents/: eval-coordinator.md
.opencode/commands/: chit.md  eval.md  tala.md
.opencode/skills/chit/: SKILL.md
.opencode/skills/chit-eval/: SKILL.md
.opencode/skills/tala/: SKILL.md
.opencode/skills/tala-eval/: SKILL.md
eval/: eval-loop.sh  harness.sh  lib.sh  run-implement.sh  run.sh
eval/scenarios/: cross-project.md  observe.md
openspec/changes/archive/2026-07-17-session-reopen-presence/: design.md  proposal.md  red-team-report.md  tasks.md
openspec/changes/build-chit/: design.md  proposal.md  tasks.md
openspec/changes/chit-wait-session-management/: design.md  proposal.md  tasks.md
openspec/changes/cli-ux-and-feedback/: design.md  proposal.md  tasks.md
openspec/changes/cli-ux-and-feedback/specs/: cli.md
openspec/changes/eval-agent-harness/: design.md  proposal.md  tasks.md
openspec/changes/eval-fix-loop-0/: design.md  proposal.md  tasks.md
openspec/changes/eval-fixes-loop-0/: design.md  proposal.md  tasks.md
openspec/changes/fix-eval-cross-project/: design.md  proposal.md  tasks.md
openspec/changes/fix-eval-feedback/: design.md  proposal.md  tasks.md
openspec/changes/fix-p1-eval-issues/: design.md  proposal.md  tasks.md
openspec/changes/fix-p1-eval-issues/specs/: cli.md
openspec/changes/fix-send-discover-agents/: design.md  proposal.md  tasks.md
openspec/changes/fix-state-consistency-bugs/: README.md  design.md  proposal.md  tasks.md
openspec/changes/observe-eval-feedback-fixes/: design.md  proposal.md  tasks.md
openspec/changes/rename-chit-to-tala/: proposal.md
openspec/changes/stale-session-wait-fallback/: design.md  proposal.md  tasks.md
src/: api.rs  cli.rs  daemon.rs  main.rs  models.rs  store.rs
tests/: e2e.rs
(+38 files in other folders)
